--- a/first-app/src/App.css
+++ b/first-app/src/App.css
@@ -83,7 +83,16 @@ table {
 .table thead {
   background-color: rgb(202, 202, 202);
 }
-
+.timer {
+  position: absolute;
+  right: 2vw;
+  top: 2vh;
+  display: flex;
+}
+.timer p{
+  font-weight: 700;
+  margin-right: 1rem;
+}
 
 
 @media only screen and (max-width: 800px) {
