--- a/first-app/src/App.css
+++ b/first-app/src/App.css
@@ -39,6 +39,11 @@ form h2 {
   text-align: center;
   font-size: 2rem;
 }
+form input {
+  width: 100%;
+  padding: .3rem .3rem;
+  margin: 4px 0;
+}
 .daftarItem {
   display: flex;
   align-items: flex-end;
@@ -84,6 +89,7 @@ table {
   margin: 0;
   margin-bottom: 1rem;
 }
+
 .table td {
   border: 1px solid white;
   background-color: rgb(252, 122, 1);
