--- a/first-app/src/App.css
+++ b/first-app/src/App.css
@@ -1,30 +1,162 @@
+:root {
+  --primary-color: #302ae6;
+  --secondary-color: #b0bee4;
+  --font-color: #424242;
+  --bg-color: #fff;
+  --heading-color: #292922;
+}
+
+
 * {
   box-sizing: border-box;
 }
-.body {
+
+body {
   font-size: 16px;
   margin: 0;
+  min-height: 100vh;
 }
+.light {
+  transition: .4s all ease-in-out;
+  min-height: 100vh;
+  background-color: var(--bg-color);
+  color: var(--font-color);
+}
+.light label {
+  color: var(--font-color);
+}
+
+.light a,.light h2,.light h3,.light h4{
+  color: var(--heading-color);
+}
+.dark {
+  min-height: 100vh;
+  transition: .4s all ease-in-out;
+  background-color: var(--font-color);
+  color: var(--bg-color);
+}
+.dark label {
+  color: var(--bg-color);
+}
+.dark a,.dark h2,.dark h3,.dark h4 {
+  color: var(--secondary-color);
+}
+
+
 button {
-    text-decoration: none;
-    outline: none;
-    cursor: pointer;
-    border-radius: 1rem;
-    border: 0;
-    padding: .5rem .9rem;
-    background-color: #002;
-    color: wheat;
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 1rem;
+  border: 0;
+  padding: 0.5rem 0.9rem;
+  background-color: #002;
 }
-button:hover {
-  background-color:  wheat;
-    color: #002;
+.light button {
+  color: rgb(246, 255, 250) ;
+  background-color: #002;
 }
+.light button:hover {
+  background-color: rgb(246, 255, 250) ;
+  color: #002;
+}
+
+.dark button {
+  color:#002 ;
+  background-color:rgb(246, 255, 250)  ;
+}
+.dark button:hover {
+  background-color:#002 ;
+  color:rgb(246, 255, 250) ;
+}
+
 .container {
   padding-top: 5vh;
   min-height: 50vh;
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+nav {
+  height: 10vh;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+nav ul {
+  margin-left: 5vw;
+  display: flex;
+}
+nav ul li {
+  margin-right: 2rem;
+  list-style: none;
+  text-decoration: none;
+}
+nav ul li a {
+  text-decoration: none;
+}
+
+/*slider switch css */
+.theme-switch-wrapper {
+  margin-right: 5vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.theme-switch-wrapper em {
+  margin-left: 10px;
+  font-size: 1rem;
+}
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display: none;
+}
+
+.slider {
+  background-color: #ccc;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: 0.4s;
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: 0.4s;
+  width: 26px;
+}
+
+input:checked + .slider {
+  background-color: #66bb6a;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 
 form {
@@ -41,14 +173,13 @@ form h2 {
 }
 form input {
   width: 100%;
-  padding: .3rem .3rem;
+  padding: 0.3rem 0.3rem;
   margin: 4px 0;
 }
 .daftarItem {
   display: flex;
   align-items: flex-end;
   margin-bottom: 1rem;
-
 }
 .item {
   display: flex;
@@ -70,17 +201,19 @@ form input {
   border: 1px solid #002;
   padding: 2%;
   border-radius: 1rem;
-  display: flex;  
+  display: flex;
   flex-direction: column;
   text-align: center;
 }
+
+
 .ct {
   padding: 2rem;
   background-color: rgb(243, 241, 241);
 }
 .table h2 {
   font-size: 2rem;
-margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 table {
   background-color: #fff;
@@ -89,25 +222,46 @@ table {
   margin: 0;
   margin-bottom: 1rem;
 }
-
-.table td {
-  border: 1px solid white;
-  background-color: rgb(252, 122, 1);
+.light table,.dark .ct,.light .table {
+  background-color: var( --bg-color);
 }
+.dark table,.dark .ct,.dark .table {
+  background-color: var(--heading-color);
+}
+.light input{
+  background-color: var(--bg-color);
+  color: var(--heading-color);
+}
+.dark input {
+  background-color: var(--heading-color);
+  color: var(--bg-color);
+}
+
+
+
+.light .table td {
+  border: 1px solid white;
+  background-color: rgb(247, 243, 240);
+}
+.dark .table td {
+  border: 1px solid white;
+  background-color: rgb(39, 33, 28);
+}
+
 .table thead {
   background-color: rgb(202, 202, 202);
 }
 .timer {
   position: absolute;
-  right: 2vw;
-  top: 2vh;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
   display: flex;
 }
-.timer p{
+.timer p {
   font-weight: 700;
   margin-right: 1rem;
 }
-
 
 @media only screen and (max-width: 800px) {
   form {
